# widy

./: .env.example  .gitignore  Dockerfile.twitch-mock-api  LICENSE_MIT  PRIVACY.md  README.md  biome.json  index.html  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json  tsconfig.node.json  vite.config.auc_fighter_adapter.ts  vite.config.ts  vite.config.widget.ts
shared/: enums.ts  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/auc-fighter/: auc-fighter-adapter.js  default.htm
src-tauri/auc-fighter/script/: ai-proxy.js  animation-trial.js  cdHelper.js  char-select.js  debug-modal.js  debug.js  flags.js  fonts.js  fontsystem.js  generic-ai.js  health-bar.js  init.js  joypad.min.js  ken-ai.js  match.js  player-common.js  player-ken-spritedata.js  player-ken2-spritedata.js  player-mbison-spritedata.js  player-mbison.js  player-mbison2-spritedata.js  player-ryu-spritedata.js  player-ryu.js  player-ryu2-spritedata.js  player-sagat-spritedata.js  player-sagat.js  player.ai.js  player.combat.js  player.debug.js  player.input.js  player.motion.js  sagat-ai.js  user.js  values.js  webAudioManager.js
src-tauri/capabilities/: default.json  desktop.json
src-tauri/dist-widget/: index.html  widget.js
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: alert.rs  auc_fighter_settings.rs  auction_settings.rs  donation.rs  follow.rs  goal.rs  lib.rs  maption_settings.rs  media_settings.rs  message.rs  raid.rs  service.rs  settings.rs  subscription.rs  widget.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: .gitignore  Cargo.toml
src-tauri/migration/src/: lib.rs  m20250324_201351_create_messages_table.rs  m20250324_221133_create_table_settings.rs  m20250325_171158_create_table_alerts.rs  m20250325_185301_add_default_alert.rs  m20250325_185310_add_default_settings.rs  m20250405_190810_create_table_media_settings.rs  m20250405_190835_add_default_media_settings.rs  m20250711_124016_crate_table_auction_settings.rs  m20250711_124829_add_default_auction_settings.rs  m20250717_152323_create_table_maption_settings.rs  m20250717_152358_add_default_maption_settings.rs  m20250819_113411_create_table_auc_fighter_settings.rs  m20250819_113447_add_default_auc_fighter_settings.rs  m20250909_130535_add_alert_columns.rs  m20250911_130555_create_table_goals.rs  m20251104_230710_update_messages_colums.rs  m20251111_172605_create_table_services.rs  m20251111_183902_add_default_services.rs  (+17 more)
src-tauri/src/: constants.rs  lib.rs  main.rs
(+474 files in other folders)
