[package]
name = "widy"
version = "0.2.0"
description = "Widy is a unified alert and widget service for streamers that works across multiple platforms."
authors = ["ik1s3v"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "widy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15.7"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grammers-client = "0.7.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
futures = "0.3.31"
thiserror = "2.0.12"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
reqwest = "0.12.14"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = [ "serde"] }
async-trait = "0.1.88"
regex = "1.11.1"
lingua = "1.7.1"
sea-orm = { version = "2.0.0-rc.20", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-json", "tests-cfg"] }
tauri-plugin-log = "2"
log = "0.4.27"
url = { version = "2.5.4", features = ["serde"] }
mockall = "0.13.1"
tauri-plugin-devtools = "2.0.0"
urlencoding = "2.1.3"
axum = { version = "0.8.4", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tauri-plugin-opener = "2"
tauri-plugin-websocket = "2"
dotenvy = "0.15.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3.19.1"

