[package]
name = "migration"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.20"
features = ["sqlx-sqlite", "runtime-tokio-rustls"]
